--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "dependencies": {
     "fetch-ponyfill": "^6.1.0",
     "next": "^9.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
@@ -19,7 +21,6 @@
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
-    "redux-devtools-extension": "^2.13.8"
+    "eslint-plugin-react": "^7.14.2"
   }
 }
